<resources>
    <string name="app_name">App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="header">My Nanodegree Apps!</string>
    <string name="title_streamer">Spotify Streamer</string>
    <string name="title_scores">Scores App</string>
    <string name="title_library">Library App</string>
    <string name="title_bigger">Build It Bigger</string>
    <string name="title_reader">XYZ Reader</string>
    <string name="title_capstone">Capstone Project</string>
</resources>
